@@ -2,7 +2,7 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: TODO,v 1.4 2004/11/05 22:04:23 port001 Exp $
+# $Id: TODO,v 1.5 2004/11/06 21:21:41 port001 Exp $
 
 
 Ian:
@@ -11,6 +11,12 @@ Ian:
 * Convert the admin site modules over to the new style.
 
 * Convert indexes into classes, perhaps. (DONE) 
+
+* Salt the MD5s
+
+* Sort out the SQL code
+
+* Lots of other things I always forget when it comes to writing TODOs. 
 
 Anyone:
 * View Changelog
