@@ -2,7 +2,12 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.11 2004/11/05 20:28:09 port001 Exp $
+# $Id: ChangeLog,v 1.12 2004/11/06 21:21:41 port001 Exp $
+
+06 Nov 2004; Ian Leitch <port001@gentoo.org>:
+ * Fixed dynamic module loading in the index file (NOTE: This method
+   assigns the class object to the module name, not the module object to
+   module name.)
 
 05 Nov 2004; Ian Leitch <port001@gentoo.org>:
  * We now have only one index to handle both user and admin modules,
